Infinite Heaven changelog
Just notable changes, see github commits for full

r260 - 
Fix: quest adding their missionPacks in helispace - thanks CapLag for an unrelated report that made me test something related.

Clear ancillary ih saves on new game.

InfQuest / IH Sideops menu:

Renamed unlockSideOpNumber to quest_forceQuestNumber, just an internal name change to be more consistant and accurate. 

quest_updateRepopMode="Repop mode": "On none left"|"Allways"
Lets you choose the behaviour of how repeatable sideops are refreshed. 
The update is run for the sideop area of a quest you just finished, 
or for all areas when changing many of the IH sideops options or rerolling sideops. 
The default behaviour 'On none left' will only repopulate sideops when there are no other uncompleted sideops, and all other repeatable sideops have been completed. 
'Allways' will refresh repeatable quests every time the update is called.

quest_setIsOnceToRepop="Repop one-time sideops"
"Lets you force story and one-time sideops to be replayable."
Replaces "Unlock Sideops mode".

quest_selectForArea="Selection for Area mode"
Renamed from sideOpsSelectionMode
Categories removed, use the Sideops category filter menu instead. 
'Random Addon' setting added to prioritize Addon sideops.
Sideops are broken into areas to stop overlap, this setting lets you control the choice which repop sideop will be selected to be Active for the area.
'Random Addon' will prioritize Addon sideops first.
All selection is still prioritized by uncompleted story sideops, then other uncompleted sideops, then repop sideops selected by this option.

quest_showOnUiMode="Show on UI mode"
Replaces "Show all open sideops"
Chooses what sideops are shown on the idroid UI.
"Only Active or Cleared (Default)" - the default behavior. Note it doesn't include uncleared, so if there's multiple Uncleared but not Active sideops they won't show.
"Only Active" - only the current Active sideops, no Cleared sideops.