@@ -8,7 +8,9 @@ Clear ancillary ih saves on new game.
 
 InfQuest / IH Sideops menu:
 
-Renamed unlockSideOpNumber to quest_forceQuestNumber, just an internal name change to be more consistant and accurate. 
+Renamed unlockSideOpNumber to quest_forceQuestNumber, just an internal name change to be more consistant and accurate. Though you will have to set the setting again.
+
+Renamed ihSideopsPercentageCount to quest_addonsCountForCompletion, just an internal name change to be more consistant and accurate. Though you will have to set the setting again.
 
 quest_updateRepopMode="Repop mode": "On none left"|"Allways"
 Lets you choose the behaviour of how repeatable sideops are refreshed. 
